# leaf-focus

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  install_xpdf.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-analysis.yml  codeql.yml  create-package.yml  docs.yml  labeler.yml  pypi-package.yml  test-package.yml
docs/: index.html  index.js  leaf_focus.html  requirements.txt  search.js
docs/leaf_focus/: app.html  cli.html  index.html  ocr.html  pdf.html  utils.html
docs/leaf_focus/ocr/: index.html  keras_ocr.html  model.html
docs/leaf_focus/pdf/: index.html  model.html  xpdf.html
docs/source/: api.rst  conf.py  index.rst
src/leaf_focus/: __init__.py  app.py  cli.py  model.py  program.py  utils.py  xml.py
src/leaf_focus/ocr/: __init__.py  keras_ocr.py  model.py
src/leaf_focus/pdf/: __init__.py  model.py  xpdf.py
tests/: conftest.py  helper.py  test_cli.py  test_keras_ocr.py  test_leaf_focus.py  test_utils.py  test_xpdf.py  test_xpdf_image.py  test_xpdf_info.py  test_xpdf_text.py
tests/resources/example1/: 452-06-win10-win8-win7-release-notes-info.json  452-06-win10-win8-win7-release-notes-output-layout-eol-dos.txt  452-06-win10-win8-win7-release-notes-page-image-gray-000022-predictions.csv  45206-win10-win8-win7-release-notes-info.json
